--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11100,6 +11100,21 @@ a.text-dark:focus {
   }
 }
 
+.inputs {
+  text-align: -webkit-center;
+  border: 1px solid #d5d5d5;
+  padding-top: 90px;
+  border-radius: 10px;
+  margin-top: 50px;
+  background: white;
+  background-image: url("/public/img/clouds.png");
+  background-repeat: no-repeat;
+}
+
+.inputs a {
+  font-family: sans-serif;
+}
+
 .login {
   text-align: -webkit-center;
   width: 524px;
@@ -11138,7 +11153,7 @@ a.text-dark:focus {
 }
 
 .login .background-login-image {
-  background: url(/img/iceberg-opacity.jpg);
+  background: url(/public/img/iceberg-opacity.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   width: 396px;
@@ -11166,55 +11181,46 @@ a.text-dark:focus {
   font-family: monospace;
 }
 
-.profile .profile-picture img {
+.profile-picture img {
   max-width: 100%;
   border: 1px solid #d5d5d5;
   border-radius: 10px;
   padding: 3px;
 }
 
-.profile .-image img {
+.-image img {
   max-width: 70%;
 }
 
-.profile .employee-information {
+.employee-information {
   font-family: Gotham;
 }
 
-.profile .employee-information a {
+.employee-information a {
   font-size: 15px;
   line-height: 14px;
   color: #6C757D;
 }
 
-.profile .employee-information p {
+.employee-information .employee-information {
+  font-family: Gotham;
+}
+
+.employee-information .employee-information a {
+  font-size: 15px;
+  line-height: 14px;
+  color: #6C757D;
+}
+
+.employee-information .employee-information p {
   font-family: Gotham;
   font-size: 20px;
   line-height: 19px;
   color: #6C757D;
   font-weight: bold;
-  margin: 9px;
 }
 
-.profile .card-body {
-  position: absolute;
-  width: 288px;
-  background: rgba(222, 238, 249, 0.1);
-  border: 2px solid #FF8055;
-  box-sizing: border-box;
-  border-radius: 15px;
-}
-
-.profile .employees a {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
-  color: #6C757D;
-}
-
-.profile .drive-button {
+.employee-information .drive-button {
   width: 100px;
   background: #F2F8FD;
   border: 2px solid #FF8055;
@@ -11224,17 +11230,7 @@ a.text-dark:focus {
   color: #6C757D;
 }
 
-.profile .drive-button {
-  width: 100px;
-  background: #F2F8FD;
-  border: 2px solid #FF8055;
-  box-sizing: border-box;
-  border-radius: 8px;
-  font-size: 16px;
-  color: #6C757D;
-}
-
-.profile .card-body {
+.employee-information .card-body {
   position: absolute;
   width: 288px;
   background: rgba(222, 238, 249, 0.1);
@@ -11243,7 +11239,7 @@ a.text-dark:focus {
   border-radius: 15px;
 }
 
-.profile .employees a {
+.employee-information .employees a {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -11252,7 +11248,7 @@ a.text-dark:focus {
   color: #6C757D;
 }
 
-.profile .days-info {
+.employee-information .days-info {
   width: 324px;
   background: rgba(222, 238, 249, 0.1);
   border: 1px solid #FF8055;
@@ -11260,26 +11256,26 @@ a.text-dark:focus {
   border-radius: 20px;
 }
 
-.profile .days-info ul {
+.employee-information .days-info ul {
   font-size: 40px;
 }
 
-.profile .days-info li {
+.employee-information .days-info li {
   display: list-item;
 }
 
-.profile .days-info a {
+.employee-information .days-info a {
   color: #6C757D;
   font-size: 16px;
 }
 
-.profile .days-info p {
+.employee-information .days-info p {
   color: #6C757D;
   font-size: 16px;
   margin-left: 5px;
 }
 
-.profile .profile-logo p {
+.employee-information .profile-logo p {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -11288,7 +11284,7 @@ a.text-dark:focus {
   color: #000000;
 }
 
-.profile #cal {
+.employee-information #cal {
   -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   margin: 50px auto;
@@ -11299,7 +11295,7 @@ a.text-dark:focus {
   padding: 15px;
 }
 
-.profile #cal .header {
+.employee-information #cal .header {
   cursor: default;
   background: #ACD7F2;
   background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
@@ -11318,13 +11314,12 @@ a.text-dark:focus {
   text-transform: uppercase;
 }
 
-.profile #cal .header span {
+.employee-information #cal .header span {
   display: inline-block;
   line-height: 34px;
-  color: #FF8055;
 }
 
-.profile #cal .header .hook {
+.employee-information #cal .header .hook {
   width: 9px;
   height: 28px;
   position: absolute;
@@ -11340,50 +11335,175 @@ a.text-dark:focus {
   -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
 }
 
-.profile .right.hook {
+.employee-information #cal .header .hook p {
+  font-family: Gotham;
+  font-size: 20px;
+  line-height: 19px;
+  color: #6C757D;
+  font-weight: bold;
+  margin: 9px;
+}
+
+.employee-information .card-body {
+  position: absolute;
+  width: 288px;
+  background: rgba(222, 238, 249, 0.1);
+  border: 2px solid #FF8055;
+  box-sizing: border-box;
+  border-radius: 15px;
+}
+
+.employee-information .employees a {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #6C757D;
+}
+
+.employee-information .drive-button {
+  width: 100px;
+  background: #F2F8FD;
+  border: 2px solid #FF8055;
+  box-sizing: border-box;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #6C757D;
+}
+
+.employee-information .days-info {
+  width: 324px;
+  background: rgba(222, 238, 249, 0.1);
+  border: 1px solid #FF8055;
+  box-sizing: border-box;
+  border-radius: 20px;
+}
+
+.employee-information .days-info ul {
+  font-size: 40px;
+}
+
+.employee-information .days-info li {
+  display: list-item;
+}
+
+.employee-information .days-info a {
+  color: #6C757D;
+  font-size: 16px;
+}
+
+.employee-information .days-info p {
+  color: #6C757D;
+  font-size: 16px;
+  margin-left: 5px;
+}
+
+.employee-information .profile-logo p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  color: #000000;
+}
+
+.employee-information #cal {
+  -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  margin: 50px auto;
+  font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
+  display: table;
+  border: 1px solid #ACD7F2;
+  border-radius: 22px;
+  padding: 15px;
+}
+
+.employee-information #cal .header {
+  cursor: default;
+  background: #ACD7F2;
+  background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
+  height: 34px;
+  position: relative;
+  color: #fff;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  font-weight: bold;
+  text-shadow: 0px -1px 0 #ACD7F2;
+  text-transform: uppercase;
+}
+
+.employee-information #cal .header span {
+  display: inline-block;
+  line-height: 34px;
+  color: #FF8055;
+}
+
+.employee-information #cal .header .hook {
+  width: 9px;
+  height: 28px;
+  position: absolute;
+  bottom: 60%;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background: #ececec;
+  background: -moz-linear-gradient(right top, #fff, #827e7d);
+  background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
+  box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+}
+
+.employee-information .right.hook {
   right: 15%;
 }
 
-.profile .left.hook {
+.employee-information .left.hook {
   left: 15%;
 }
 
-.profile #cal .header .button {
+.employee-information #cal .header .button {
   width: 24px;
   text-align: center;
   position: absolute;
 }
 
-.profile #cal .header .left.button {
+.employee-information #cal .header .left.button {
   left: 0;
   border-top-left-radius: 5px;
   border-right: 1px solid #ae2a0c;
 }
 
-.profile #cal .header .right.button {
+.employee-information #cal .header .right.button {
   right: 0;
   top: 0;
   border-left: 1px solid #ae2a0c;
   border-top-right-radius: 5px;
 }
 
-.profile #cal .header .button:hover {
+.employee-information #cal .header .button:hover {
   background: -moz-linear-gradient(top, #d94215, #bb330f);
   background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f));
 }
 
-.profile #cal .header .month-year {
+.employee-information #cal .header .month-year {
   letter-spacing: 1px;
   width: 100%;
   text-align: center;
 }
 
-.profile #cal table {
+.employee-information #cal table {
   background: #fff;
   border-collapse: collapse;
 }
 
-.profile #cal td {
+.employee-information #cal td {
   color: #2b2b2b;
   width: 100px;
   height: 100px;
@@ -11393,7 +11513,7 @@ a.text-dark:focus {
   cursor: default;
 }
 
-.profile #cal #days td {
+.employee-information #cal #days td {
   height: 26px;
   line-height: 26px;
   text-transform: uppercase;
@@ -11401,11 +11521,11 @@ a.text-dark:focus {
   color: #9e9e9e;
 }
 
-.profile #cal #days td:not(:last-child) {
+.employee-information #cal #days td:not(:last-child) {
   border-right: 1px solid #fff;
 }
 
-.profile #cal #cal-frame td.today {
+.employee-information #cal #cal-frame td.today {
   background: #ededed;
   color: #8c8c8c;
   box-shadow: 1px 1px 0px #fff inset;
@@ -11413,7 +11533,7 @@ a.text-dark:focus {
   -webkit-box-shadow: 1px 1px 0px #fff inset;
 }
 
-.profile #cal #cal-frame td:not(.nil):hover {
+.employee-information #cal #cal-frame td:not(.nil):hover {
   color: #fff;
   text-shadow: #6C1A07 0px -1px;
   background: #CD310D;
@@ -11423,24 +11543,24 @@ a.text-dark:focus {
   -webkit-box-shadow: 0px 0px 0px;
 }
 
-.profile #cal #cal-frame td span {
+.employee-information #cal #cal-frame td span {
   font-size: 80%;
   position: relative;
 }
 
-.profile #cal #cal-frame td span:first-child {
+.employee-information #cal #cal-frame td span:first-child {
   bottom: 5px;
 }
 
-.profile #cal #cal-frame td span:last-child {
+.employee-information #cal #cal-frame td span:last-child {
   top: 5px;
 }
 
-.profile #cal #cal-frame table.curr {
+.employee-information #cal #cal-frame table.curr {
   float: left;
 }
 
-.profile #cal #cal-frame table.temp {
+.employee-information #cal #cal-frame table.temp {
   position: absolute;
 }
 
@@ -11508,7 +11628,7 @@ a.text-dark:focus {
 }
 
 .news .news-header-image .clouds {
-  background-image: url("/img/clouds.png");
+  background-image: url("/public/img/clouds.png");
   background-size: cover;
   height: 200px;
 }
@@ -11649,7 +11769,7 @@ a.text-dark:focus {
   z-index: 2;
   visibility: hidden;
   opacity: 0;
-  overflow: hiden;
+  overflow: hidden;
   -webkit-transition: 0.64s ease-in-out;
   transition: 0.64s ease-in-out;
 }
@@ -11689,6 +11809,8 @@ a.text-dark:focus {
 }
 
 .popup__photo img {
+  max-width: 160px;
+  /*max-height: 300px;*/
   max-width: 160px;
   /*max-height: 300px;*/
 }
@@ -11783,7 +11905,7 @@ a.text-dark:focus {
 }
 
 .calendar-create-event .event-header .clouds {
-  background-image: url("/img/clouds.png");
+  background-image: url("/public/img/clouds.png");
   background-size: cover;
   height: 200px;
 }
@@ -12937,6 +13059,4 @@ a.fc-more:hover {
 .chemim {
   font-size: 50px;
 }
-
-/*CALENDAR CSS ENDS*/
 
