--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11100,6 +11100,21 @@ a.text-dark:focus {
   }
 }
 
+.inputs {
+  text-align: -webkit-center;
+  border: 1px solid #d5d5d5;
+  padding-top: 90px;
+  border-radius: 10px;
+  margin-top: 50px;
+  background: white;
+  background-image: url("/public/img/clouds.png");
+  background-repeat: no-repeat;
+}
+
+.inputs a {
+  font-family: sans-serif;
+}
+
 .login {
   text-align: -webkit-center;
   width: 524px;
@@ -11138,7 +11153,7 @@ a.text-dark:focus {
 }
 
 .login .background-login-image {
-  background: url(/img/iceberg-opacity.jpg);
+  background: url(/public/img/iceberg-opacity.jpg);
   background-repeat: no-repeat;
   background-size: contain;
   width: 396px;
@@ -11196,34 +11211,6 @@ a.text-dark:focus {
   margin: 9px;
 }
 
-.profile .card-body {
-  position: absolute;
-  width: 288px;
-  background: rgba(222, 238, 249, 0.1);
-  border: 2px solid #FF8055;
-  box-sizing: border-box;
-  border-radius: 15px;
-}
-
-.profile .employees a {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
-  color: #6C757D;
-}
-
-.profile .drive-button {
-  width: 100px;
-  background: #F2F8FD;
-  border: 2px solid #FF8055;
-  box-sizing: border-box;
-  border-radius: 8px;
-  font-size: 16px;
-  color: #6C757D;
-}
-
 .profile .drive-button {
   width: 100px;
   background: #F2F8FD;
@@ -11244,7 +11231,6 @@ a.text-dark:focus {
 }
 
 .profile .employees a {
-  font-family: Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -11288,7 +11274,7 @@ a.text-dark:focus {
   color: #000000;
 }
 
-.profile #cal {
+#cal {
   -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   margin: 50px auto;
@@ -11299,7 +11285,7 @@ a.text-dark:focus {
   padding: 15px;
 }
 
-.profile #cal .header {
+#cal .header {
   cursor: default;
   background: #ACD7F2;
   background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
@@ -11318,13 +11304,12 @@ a.text-dark:focus {
   text-transform: uppercase;
 }
 
-.profile #cal .header span {
+#cal .header span {
   display: inline-block;
   line-height: 34px;
-  color: #FF8055;
 }
 
-.profile #cal .header .hook {
+#cal .header .hook {
   width: 9px;
   height: 28px;
   position: absolute;
@@ -11340,50 +11325,111 @@ a.text-dark:focus {
   -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
 }
 
-.profile .right.hook {
+#cal .header .hook p {
+  font-family: Gotham;
+  font-size: 20px;
+  line-height: 19px;
+  color: #6C757D;
+  font-weight: bold;
+  margin: 9px;
+}
+
+#cal {
+  -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  margin: 50px auto;
+  font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
+  display: table;
+  border: 1px solid #ACD7F2;
+  border-radius: 22px;
+  padding: 15px;
+}
+
+#cal .header {
+  cursor: default;
+  background: #ACD7F2;
+  background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
+  height: 34px;
+  position: relative;
+  color: #fff;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  font-weight: bold;
+  text-shadow: 0px -1px 0 #ACD7F2;
+  text-transform: uppercase;
+}
+
+#cal .header span {
+  display: inline-block;
+  line-height: 34px;
+  color: #FF8055;
+}
+
+#cal .header .hook {
+  width: 9px;
+  height: 28px;
+  position: absolute;
+  bottom: 60%;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background: #ececec;
+  background: -moz-linear-gradient(right top, #fff, #827e7d);
+  background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
+  box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+}
+
+.right.hook {
   right: 15%;
 }
 
-.profile .left.hook {
+.left.hook {
   left: 15%;
 }
 
-.profile #cal .header .button {
+#cal .header .button {
   width: 24px;
   text-align: center;
   position: absolute;
 }
 
-.profile #cal .header .left.button {
+#cal .header .left.button {
   left: 0;
   border-top-left-radius: 5px;
   border-right: 1px solid #ae2a0c;
 }
 
-.profile #cal .header .right.button {
+#cal .header .right.button {
   right: 0;
   top: 0;
   border-left: 1px solid #ae2a0c;
   border-top-right-radius: 5px;
 }
 
-.profile #cal .header .button:hover {
+#cal .header .button:hover {
   background: -moz-linear-gradient(top, #d94215, #bb330f);
   background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f));
 }
 
-.profile #cal .header .month-year {
+#cal .header .month-year {
   letter-spacing: 1px;
   width: 100%;
   text-align: center;
 }
 
-.profile #cal table {
+#cal table {
   background: #fff;
   border-collapse: collapse;
 }
 
-.profile #cal td {
+#cal td {
   color: #2b2b2b;
   width: 100px;
   height: 100px;
@@ -11393,7 +11439,7 @@ a.text-dark:focus {
   cursor: default;
 }
 
-.profile #cal #days td {
+#cal #days td {
   height: 26px;
   line-height: 26px;
   text-transform: uppercase;
@@ -11401,11 +11447,11 @@ a.text-dark:focus {
   color: #9e9e9e;
 }
 
-.profile #cal #days td:not(:last-child) {
+#cal #days td:not(:last-child) {
   border-right: 1px solid #fff;
 }
 
-.profile #cal #cal-frame td.today {
+#cal #cal-frame td.today {
   background: #ededed;
   color: #8c8c8c;
   box-shadow: 1px 1px 0px #fff inset;
@@ -11413,7 +11459,7 @@ a.text-dark:focus {
   -webkit-box-shadow: 1px 1px 0px #fff inset;
 }
 
-.profile #cal #cal-frame td:not(.nil):hover {
+#cal #cal-frame td:not(.nil):hover {
   color: #fff;
   text-shadow: #6C1A07 0px -1px;
   background: #CD310D;
@@ -11423,24 +11469,24 @@ a.text-dark:focus {
   -webkit-box-shadow: 0px 0px 0px;
 }
 
-.profile #cal #cal-frame td span {
+#cal #cal-frame td span {
   font-size: 80%;
   position: relative;
 }
 
-.profile #cal #cal-frame td span:first-child {
+#cal #cal-frame td span:first-child {
   bottom: 5px;
 }
 
-.profile #cal #cal-frame td span:last-child {
+#cal #cal-frame td span:last-child {
   top: 5px;
 }
 
-.profile #cal #cal-frame table.curr {
+#cal #cal-frame table.curr {
   float: left;
 }
 
-.profile #cal #cal-frame table.temp {
+#cal #cal-frame table.temp {
   position: absolute;
 }
 
@@ -11539,7 +11585,7 @@ a.text-dark:focus {
 }
 
 .news .news-title h2 {
-  font-size: 40px;
+  font-size: 39px;
   line-height: 38px;
   color: #6C757D;
 }
@@ -11649,7 +11695,7 @@ a.text-dark:focus {
   z-index: 2;
   visibility: hidden;
   opacity: 0;
-  overflow: hiden;
+  overflow: hidden;
   -webkit-transition: 0.64s ease-in-out;
   transition: 0.64s ease-in-out;
 }
@@ -11691,6 +11737,8 @@ a.text-dark:focus {
 .popup__photo img {
   max-width: 160px;
   /*max-height: 300px;*/
+  max-width: 160px;
+  /*max-height: 300px;*/
 }
 
 .col-md-12-mine {
@@ -11720,7 +11768,7 @@ a.text-dark:focus {
           justify-content: center;
   width: 60%;
   height: 100%;
-  padding: 137px 0 0 43px;
+  padding: 40px 0 0 43px;
 }
 
 .popup__text h3 {
@@ -12937,6 +12985,4 @@ a.fc-more:hover {
 .chemim {
   font-size: 50px;
 }
-
-/*CALENDAR CSS ENDS*/
 
