--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,21 +5,21 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-<<<<<<< HEAD
 .inputs {
-    text-align: -webkit-center;
-    border: 1px solid #d5d5d5;
-    padding-top: 90px;
-    border-radius: 10px;
-    margin-top: 50px;
-    background: white;
-    background-image: url("/img/clouds.png");
-    background-repeat: no-repeat;
+  text-align: -webkit-center;
+  border: 1px solid #d5d5d5;
+  padding-top: 90px;
+  border-radius: 10px;
+  margin-top: 50px;
+  background: white;
+  background-image: url("/public/img/clouds.png");
+  background-repeat: no-repeat;
 
-    a {
-        font-family: sans-serif;
-    }
-=======
+  a {
+    font-family: sans-serif;
+  }
+}
+
 .login {
   text-align: -webkit-center;
   width: 524px;
@@ -28,10 +28,12 @@
   border: 2px solid #FF8055;
   box-sizing: border-box;
   border-radius: 15px;
+
   a {
     font-family: sans-serif;
   }
-  .login-inputs{
+
+  .login-inputs {
     max-width: 100%;
     width: 404px;
     height: 44px;
@@ -47,21 +49,23 @@
     color: rgba(108, 117, 125, 0.7);
 
   }
-  button{
+
+  button {
     width: 404px;
     height: 44px;
     background: #FF8055;
     border-radius: 8px;
   }
-.background-login-image{
-  background: url(/img/iceberg-opacity.jpg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 396px;
-  height: 300px;
-  background-position: center;
-}
->>>>>>> 05efff5a44aad5affb560d09f8360357999d069d
+
+  .background-login-image {
+    background: url(/public/img/iceberg-opacity.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 396px;
+    height: 300px;
+    background-position: center;
+  }
+
 }
 
 .form-control {
@@ -84,155 +88,45 @@
     margin-top: 10px;
     font-family: monospace;
   }
-  .profile-picture {
-    img {
-      max-width: 100%;
-      border: 1px solid #d5d5d5;
-      border-radius: 10px;
-      padding: 3px;
-    }
+.profile-picture {
+  img {
+    max-width: 100%;
+    border: 1px solid #d5d5d5;
+    border-radius: 10px;
+    padding: 3px;
   }
-  .-image {
-    img {
-      max-width: 70%;
-    }
+}
+
+.-image {
+  img {
+    max-width: 70%;
   }
-  .employee-information {
+}
+
+.employee-information {
+  font-family: Gotham;
+  a {
+    font-size: 15px;
+    line-height: 14px;
+    color: #6C757D;
+  }
+  p {
     font-family: Gotham;
-    a {
-      font-size: 15px;
-      line-height: 14px;
-      color: #6C757D;
-    }
-<<<<<<< HEAD
-    .employee-information {
-        font-family: Gotham;
-        a {
-            font-size: 15px;
-            line-height: 14px;
-            color: #6C757D;
-        }
-        p {
-            font-family: Gotham;
-            font-size: 20px;
-            line-height: 19px;
-            color: #6C757D;
-            font-weight: bold;
-        }
-    }
-    .drive-button{
-        width: 100px;
-        background: #F2F8FD;
-        border: 2px solid #FF8055;
-        box-sizing: border-box;
-        border-radius: 8px;
-        font-size: 16px;
-        color: #6C757D;
-    }
-    .card-body {
-        position: absolute;
-        width: 288px;
-        background: rgba(222, 238, 249, 0.1);
-        border: 2px solid #FF8055;
-        box-sizing: border-box;
-        border-radius: 15px;
-    }
-    .employees a {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 16px;
-        line-height: 19px;
-        color: #6C757D;
-    }
-    .days-info {
-        width: 324px;
-        background: rgba(222, 238, 249, 0.1);
-        border: 1px solid #FF8055;
-        box-sizing: border-box;
-        border-radius: 20px;
-        ul {
-            font-size: 40px;
-        }
-        li {
-            display: list-item;
-        }
-        a {
-            color: #6C757D;
-            font-size: 16px;
-        }
-        p {
-            color: #6C757D;
-            font-size: 16px;
-            margin-left: 5px;
-        }
-    }
-    .profile-logo {
-        p {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 12px;
-            line-height: 14px;
-            color: #000000;
-        }
-    }
-    #cal {
-        -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-        -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-        margin: 50px auto;
-        font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
-        display: table;
-        border: 1px solid #ACD7F2;
-        border-radius: 22px;
-        padding: 15px;
-    }
-    #cal .header {
-        cursor: default;
-        background: #ACD7F2;
-        background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
-        background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
-        height: 34px;
-        position: relative;
-        color: #fff;
-        -webkit-border-top-left-radius: 5px;
-        -webkit-border-top-right-radius: 5px;
-        -moz-border-radius-topleft: 5px;
-        -moz-border-radius-topright: 5px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        font-weight: bold;
-        text-shadow: 0px -1px 0 #ACD7F2;
-        text-transform: uppercase;
-    }
-    #cal .header span {
-        display: inline-block;
-        line-height: 34px;
-    }
-    #cal .header .hook {
-        width: 9px;
-        height: 28px;
-        position: absolute;
-        bottom: 60%;
-        border-radius: 10px;
-        -moz-border-radius: 10px;
-        -webkit-border-radius: 10px;
-        background: #ececec;
-        background: -moz-linear-gradient(right top, #fff, #827e7d);
-        background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
-        box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-        -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-        -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-=======
-    p {
-      font-family: Gotham;
-      font-size: 20px;
-      line-height: 19px;
-      color: #6C757D;
-      font-weight: bold;
-      margin: 9px;
->>>>>>> 05efff5a44aad5affb560d09f8360357999d069d
-    }
+    font-size: 20px;
+    line-height: 19px;
+    color: #6C757D;
+    font-weight: bold;
+    margin: 9px;
+  }
+}
+  .drive-button {
+    width: 100px;
+    background: #F2F8FD;
+    border: 2px solid #FF8055;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 16px;
+    color: #6C757D;
   }
 
   .card-body {
@@ -243,45 +137,42 @@
     box-sizing: border-box;
     border-radius: 15px;
   }
+
   .employees a {
-    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #6C757D;
   }
-  .drive-button {
-    width: 100px;
-    background: #F2F8FD;
-    border: 2px solid #FF8055;
-    box-sizing: border-box;
-    border-radius: 8px;
-    font-size: 16px;
-    color: #6C757D;
-  }
+
   .days-info {
     width: 324px;
     background: rgba(222, 238, 249, 0.1);
     border: 1px solid #FF8055;
     box-sizing: border-box;
     border-radius: 20px;
+
     ul {
       font-size: 40px;
     }
+
     li {
       display: list-item;
     }
+
     a {
       color: #6C757D;
       font-size: 16px;
     }
+
     p {
       color: #6C757D;
       font-size: 16px;
       margin-left: 5px;
     }
   }
+
   .profile-logo {
     p {
       font-family: Roboto;
@@ -292,7 +183,7 @@
       color: #000000;
     }
   }
-
+}
   #cal {
     -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
@@ -303,6 +194,7 @@
     border-radius: 22px;
     padding: 15px;
   }
+
   #cal .header {
     cursor: default;
     background: #ACD7F2;
@@ -321,11 +213,140 @@
     text-shadow: 0px -1px 0 #ACD7F2;
     text-transform: uppercase;
   }
+
+  #cal .header span {
+    display: inline-block;
+    line-height: 34px;
+  }
+
+  #cal .header .hook {
+    width: 9px;
+    height: 28px;
+    position: absolute;
+    bottom: 60%;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    background: #ececec;
+    background: -moz-linear-gradient(right top, #fff, #827e7d);
+    background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
+    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+
+    p {
+      font-family: Gotham;
+      font-size: 20px;
+      line-height: 19px;
+      color: #6C757D;
+      font-weight: bold;
+      margin: 9px;
+
+    }
+  }
+
+  //.card-body {
+  //  position: absolute;
+  //  width: 288px;
+  //  background: rgba(222, 238, 249, 0.1);
+  //  border: 2px solid #FF8055;
+  //  box-sizing: border-box;
+  //  border-radius: 15px;
+  //}
+  //
+  //.employees a {
+  //  font-family: Roboto;
+  //  font-style: normal;
+  //  font-weight: normal;
+  //  font-size: 16px;
+  //  line-height: 19px;
+  //  color: #6C757D;
+  //}
+  //
+  //.drive-button {
+  //  width: 100px;
+  //  background: #F2F8FD;
+  //  border: 2px solid #FF8055;
+  //  box-sizing: border-box;
+  //  border-radius: 8px;
+  //  font-size: 16px;
+  //  color: #6C757D;
+  //}
+  //
+  //.days-info {
+  //  width: 324px;
+  //  background: rgba(222, 238, 249, 0.1);
+  //  border: 1px solid #FF8055;
+  //  box-sizing: border-box;
+  //  border-radius: 20px;
+  //
+  //  ul {
+  //    font-size: 40px;
+  //  }
+  //
+  //  li {
+  //    display: list-item;
+  //  }
+  //
+  //  a {
+  //    color: #6C757D;
+  //    font-size: 16px;
+  //  }
+  //
+  //  p {
+  //    color: #6C757D;
+  //    font-size: 16px;
+  //    margin-left: 5px;
+  //  }
+  //}
+  //
+  //.profile-logo {
+  //  p {
+  //    font-family: Roboto;
+  //    font-style: normal;
+  //    font-weight: normal;
+  //    font-size: 12px;
+  //    line-height: 14px;
+  //    color: #000000;
+  //  }
+  //}
+
+  #cal {
+    -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+    margin: 50px auto;
+    font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
+    display: table;
+    border: 1px solid #ACD7F2;
+    border-radius: 22px;
+    padding: 15px;
+  }
+
+  #cal .header {
+    cursor: default;
+    background: #ACD7F2;
+    background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
+    background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
+    height: 34px;
+    position: relative;
+    color: #fff;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-weight: bold;
+    text-shadow: 0px -1px 0 #ACD7F2;
+    text-transform: uppercase;
+  }
+
   #cal .header span {
     display: inline-block;
     line-height: 34px;
     color: #FF8055;
   }
+
   #cal .header .hook {
     width: 9px;
     height: 28px;
@@ -341,17 +362,21 @@
     -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
   }
+
   .right.hook {
     right: 15%;
   }
+
   .left.hook {
     left: 15%;
   }
+
   #cal .header .button {
     width: 24px;
     text-align: center;
     position: absolute;
   }
+
   #cal .header .left.button {
     left: 0;
     -webkit-border-top-left-radius: 5px;
@@ -359,6 +384,7 @@
     border-top-left-radius: 5px;
     border-right: 1px solid #ae2a0c;
   }
+
   #cal .header .right.button {
     right: 0;
     top: 0;
@@ -367,19 +393,23 @@
     -moz-border-radius-topright: 5px;
     border-top-right-radius: 5px;
   }
+
   #cal .header .button:hover {
     background: -moz-linear-gradient(top, #d94215, #bb330f);
     background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f));
   }
+
   #cal .header .month-year {
     letter-spacing: 1px;
     width: 100%;
     text-align: center;
   }
+
   #cal table {
     background: #fff;
     border-collapse: collapse;
   }
+
   #cal td {
     color: #2b2b2b;
     width: 100px;
@@ -390,6 +420,7 @@
     border: 1px solid #e6e6e6;
     cursor: default;
   }
+
   #cal #days td {
     height: 26px;
     line-height: 26px;
@@ -397,9 +428,11 @@
     font-size: 90%;
     color: #9e9e9e;
   }
+
   #cal #days td:not(:last-child) {
     border-right: 1px solid #fff;
   }
+
   #cal #cal-frame td.today {
     background: #ededed;
     color: #8c8c8c;
@@ -407,6 +440,7 @@
     -moz-box-shadow: 1px 1px 0px #fff inset;
     -webkit-box-shadow: 1px 1px 0px #fff inset;
   }
+
   #cal #cal-frame td:not(.nil):hover {
     color: #fff;
     text-shadow: #6C1A07 0px -1px;
@@ -416,23 +450,28 @@
     -moz-box-shadow: 0px 0px 0px;
     -webkit-box-shadow: 0px 0px 0px;
   }
+
   #cal #cal-frame td span {
     font-size: 80%;
     position: relative;
   }
+
   #cal #cal-frame td span:first-child {
     bottom: 5px;
   }
+
   #cal #cal-frame td span:last-child {
     top: 5px;
   }
+
   #cal #cal-frame table.curr {
     float: left;
   }
+
   #cal #cal-frame table.temp {
     position: absolute;
   }
-}
+
 
 .settings {
   h2 {
@@ -440,6 +479,7 @@
     margin-top: 60px;
     font-family: monospace;
   }
+
   .setting-picture {
     img {
       max-width: 100%;
@@ -447,6 +487,7 @@
       border-radius: 10px;
       padding: 3px;
     }
+
     .input-group {
       .form-control {
         background: #FFFFFF;
@@ -456,6 +497,7 @@
       }
     }
   }
+
   .setting-input {
     position: absolute;
     margin-top: 20px;
@@ -464,18 +506,21 @@
     color: #6C757D;
     border-radius: 6px;
   }
+
   .btn-outline-secondary {
     font-weight: bold;
     width: 33%;
     font-family: sans-serif;
 
   }
+
   .-image {
     img {
       float: right;
 
     }
   }
+
   .setting-save {
     width: 168px;
     height: 36px;
@@ -486,8 +531,10 @@
     line-height: 19px;
     color: #FFFFFF;
   }
+
   .setting-logo {
     margin-top: 15rem;
+
     p {
       font-family: Roboto;
       font-style: normal;
@@ -505,11 +552,13 @@
       background-image: url("/img/clouds.png");
       background-size: cover;
       height: 200px;
+
       h2 {
         font-size: 40px;
         line-height: 38px;
         color: #6C757D;
       }
+
       .news-post {
         cursor: pointer;
         background: #FF8055;
@@ -525,19 +574,23 @@
   p {
     font-family: roboto sans-serif;
   }
+
   .news-title {
     display: -webkit-inline-flex;
     margin-top: 8rem;
+
     h2 {
-      font-size: 40px;
+      font-size: 39px;
       line-height: 38px;
       color: #6C757D;
     }
   }
+
   .news-text {
     border: 1px solid #FF8055;
     box-sizing: border-box;
     border-radius: 30px;
+
     p {
       margin-top: 20px;
       font-size: 16px;
@@ -590,6 +643,7 @@
 }
 
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600&subset=latin-ext");
+
 * {
   box-sizing: border-box;
 }
@@ -641,7 +695,7 @@
   z-index: 2;
   visibility: hidden;
   opacity: 0;
-  overflow: hiden;
+  overflow: hidden;
   transition: .64s ease-in-out;
 }
 
@@ -674,13 +728,10 @@
 }
 
 .popup__photo img {
-<<<<<<< HEAD
-    max-width: 160px;
-    /*max-height: 300px;*/
-=======
   max-width: 160px;
   /*max-height: 300px;*/
->>>>>>> 05efff5a44aad5affb560d09f8360357999d069d
+  max-width: 160px;
+  /*max-height: 300px;*/
 
 }
 
@@ -704,7 +755,7 @@
   justify-content: center;
   width: 60%;
   height: 100%;
-  padding: 137px 0 0 43px;
+  padding: 40px 0 0 43px;
 }
 
 .popup__text h3 {
@@ -754,11 +805,8 @@
 
 .profile-drive-images {
 
-<<<<<<< HEAD
-    max-height: 90px;
-=======
   max-height: 90px;
->>>>>>> 05efff5a44aad5affb560d09f8360357999d069d
+
 }
 
 //calendar starts
@@ -779,6 +827,7 @@
       background-image: url("/img/clouds.png");
       background-size: cover;
       height: 200px;
+
       h2 {
         font-size: 40px;
         line-height: 38px;
@@ -786,9 +835,11 @@
       }
     }
   }
+
   h3 {
     font-weight: bold;
   }
+
   input {
     width: 414px;
     height: 45px;
@@ -798,6 +849,7 @@
     box-sizing: border-box;
     border-radius: 10px;
   }
+
   .event-description {
     width: 414px;
     height: 135px;
@@ -807,6 +859,7 @@
     box-sizing: border-box;
     border-radius: 10px;
   }
+
   .-image {
     img {
       margin-left: -300px;
@@ -1869,13 +1922,11 @@ a.fc-more:hover {
 }
 
 .chemim {
-<<<<<<< HEAD
-    font-size: 50px;
-=======
+
   font-size: 50px;
->>>>>>> 05efff5a44aad5affb560d09f8360357999d069d
+
 }
 
-/*CALENDAR CSS ENDS*/
+///*CALENDAR CSS ENDS*/
 
 
