--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -82,43 +82,111 @@
   border-radius: 10px;
 }
 
+.employees-notification {
+  .event-header {
+    .clouds {
+      background-image: url("/img/clouds.png");
+      background-size: cover;
+      height: 200px;
+
+      h2 {
+        font-size: 40px;
+        line-height: 38px;
+        color: #6C757D;
+      }
+    }
+  }
+
+  h3 {
+    font-weight: bold;
+  }
+
+  input {
+    width: 414px;
+    height: 45px;
+    margin-top: 20px;
+    background: #F2F8FD;
+    border: 2px solid #FF8055;
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
+
+  .event-description {
+    width: 414px;
+    height: 135px;
+    margin-top: 20px;
+    background: #F2F8FD;
+    border: 2px solid #FF8055;
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
+
+  .-image {
+    img {
+      margin-left: -300px;
+      float: right;
+      height: 326.67px;
+    }
+  }
+  .create {
+    width: 413px;
+    height: 46px;
+    background: #FF8055;
+    border-radius: 10px;
+    color: #fff;
+    border: #FF8055;
+    font-size: 20px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  .notification-logo {
+    margin-top: 14rem;
+    p {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 12px;
+      line-height: 14px;
+      color: #000000;
+    }
+  }
+}
+
 .profile {
   h1 {
     font-size: 33px;
     margin-top: 10px;
     font-family: monospace;
   }
-.profile-picture {
-  img {
-    max-width: 100%;
-    border: 1px solid #d5d5d5;
-    border-radius: 10px;
-    padding: 3px;
+  .profile-picture {
+    img {
+      max-width: 100%;
+      border: 1px solid #d5d5d5;
+      border-radius: 10px;
+      padding: 3px;
+    }
   }
-}
 
-.-image {
-  img {
-    max-width: 70%;
+  .-image {
+    img {
+      max-width: 70%;
+    }
   }
-}
 
-.employee-information {
-  font-family: Gotham;
-  a {
-    font-size: 15px;
-    line-height: 14px;
-    color: #6C757D;
-  }
-  p {
+  .employee-information {
     font-family: Gotham;
-    font-size: 20px;
-    line-height: 19px;
-    color: #6C757D;
-    font-weight: bold;
-    margin: 9px;
+    a {
+      font-size: 15px;
+      line-height: 32px;
+      color: #6C757D;
+    }
+    p {
+      font-family: Gotham;
+      font-size: 20px;
+      line-height: 19px;
+      color: #000;
+    }
   }
-}
   .drive-button {
     width: 100px;
     background: #F2F8FD;
@@ -130,7 +198,6 @@
   }
 
   .card-body {
-    position: absolute;
     width: 288px;
     background: rgba(222, 238, 249, 0.1);
     border: 2px solid #FF8055;
@@ -142,7 +209,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 30px;
     color: #6C757D;
   }
 
@@ -172,7 +239,14 @@
       margin-left: 5px;
     }
   }
-
+  .create-notification {
+    width: 183px;
+    height: 37px;
+    color: white;
+    border: #FF8055;
+    background: #FF8055;
+    border-radius: 10px
+  }
   .profile-logo {
     p {
       font-family: Roboto;
@@ -183,295 +257,230 @@
       color: #000000;
     }
   }
+
 }
-  #cal {
-    -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-    -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-    margin: 50px auto;
-    font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
-    display: table;
-    border: 1px solid #ACD7F2;
-    border-radius: 22px;
-    padding: 15px;
-  }
 
-  #cal .header {
-    cursor: default;
-    background: #ACD7F2;
-    background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
-    background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
-    height: 34px;
-    position: relative;
-    color: #fff;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+#cal {
+  -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  margin: 50px auto;
+  font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
+  display: table;
+  border: 1px solid #ACD7F2;
+  border-radius: 22px;
+  padding: 15px;
+}
+
+#cal .header {
+  cursor: default;
+  background: #ACD7F2;
+  background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
+  height: 34px;
+  position: relative;
+  color: #fff;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  font-weight: bold;
+  text-shadow: 0px -1px 0 #ACD7F2;
+  text-transform: uppercase;
+}
+
+#cal .header span {
+  display: inline-block;
+  line-height: 34px;
+}
+
+#cal .header .hook {
+  width: 9px;
+  height: 28px;
+  position: absolute;
+  bottom: 60%;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background: #ececec;
+  background: -moz-linear-gradient(right top, #fff, #827e7d);
+  background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
+  box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+
+  p {
+    font-family: Gotham;
+    font-size: 20px;
+    line-height: 19px;
+    color: #6C757D;
     font-weight: bold;
-    text-shadow: 0px -1px 0 #ACD7F2;
-    text-transform: uppercase;
+    margin: 9px;
+
   }
+}
 
-  #cal .header span {
-    display: inline-block;
-    line-height: 34px;
-  }
+#cal {
+  -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  margin: 50px auto;
+  font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
+  display: table;
+  border: 1px solid #ACD7F2;
+  border-radius: 22px;
+  padding: 15px;
+}
 
-  #cal .header .hook {
-    width: 9px;
-    height: 28px;
-    position: absolute;
-    bottom: 60%;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    background: #ececec;
-    background: -moz-linear-gradient(right top, #fff, #827e7d);
-    background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
-    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-    -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-    -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+#cal .header {
+  cursor: default;
+  background: #ACD7F2;
+  background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
+  height: 34px;
+  position: relative;
+  color: #fff;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  font-weight: bold;
+  text-shadow: 0px -1px 0 #ACD7F2;
+  text-transform: uppercase;
+}
 
-    p {
-      font-family: Gotham;
-      font-size: 20px;
-      line-height: 19px;
-      color: #6C757D;
-      font-weight: bold;
-      margin: 9px;
+#cal .header span {
+  display: inline-block;
+  line-height: 34px;
+  color: #FF8055;
+}
 
-    }
-  }
+#cal .header .hook {
+  width: 9px;
+  height: 28px;
+  position: absolute;
+  bottom: 60%;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background: #ececec;
+  background: -moz-linear-gradient(right top, #fff, #827e7d);
+  background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
+  box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+  -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
+}
 
-  //.card-body {
-  //  position: absolute;
-  //  width: 288px;
-  //  background: rgba(222, 238, 249, 0.1);
-  //  border: 2px solid #FF8055;
-  //  box-sizing: border-box;
-  //  border-radius: 15px;
-  //}
-  //
-  //.employees a {
-  //  font-family: Roboto;
-  //  font-style: normal;
-  //  font-weight: normal;
-  //  font-size: 16px;
-  //  line-height: 19px;
-  //  color: #6C757D;
-  //}
-  //
-  //.drive-button {
-  //  width: 100px;
-  //  background: #F2F8FD;
-  //  border: 2px solid #FF8055;
-  //  box-sizing: border-box;
-  //  border-radius: 8px;
-  //  font-size: 16px;
-  //  color: #6C757D;
-  //}
-  //
-  //.days-info {
-  //  width: 324px;
-  //  background: rgba(222, 238, 249, 0.1);
-  //  border: 1px solid #FF8055;
-  //  box-sizing: border-box;
-  //  border-radius: 20px;
-  //
-  //  ul {
-  //    font-size: 40px;
-  //  }
-  //
-  //  li {
-  //    display: list-item;
-  //  }
-  //
-  //  a {
-  //    color: #6C757D;
-  //    font-size: 16px;
-  //  }
-  //
-  //  p {
-  //    color: #6C757D;
-  //    font-size: 16px;
-  //    margin-left: 5px;
-  //  }
-  //}
-  //
-  //.profile-logo {
-  //  p {
-  //    font-family: Roboto;
-  //    font-style: normal;
-  //    font-weight: normal;
-  //    font-size: 12px;
-  //    line-height: 14px;
-  //    color: #000000;
-  //  }
-  //}
+.right.hook {
+  right: 15%;
+}
 
-  #cal {
-    -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-    -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
-    margin: 50px auto;
-    font: 13px/1.5 "Helvetica Neue", Helvatica, Arial, san-serif;
-    display: table;
-    border: 1px solid #ACD7F2;
-    border-radius: 22px;
-    padding: 15px;
-  }
+.left.hook {
+  left: 15%;
+}
 
-  #cal .header {
-    cursor: default;
-    background: #ACD7F2;
-    background: -moz-linear-gradient(top, #ACD7F2, #ACD7F2);
-    background: -webkit-gradient(linear, left top, left bottom, from(#ACD7F2), to(#ACD7F2));
-    height: 34px;
-    position: relative;
-    color: #fff;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    font-weight: bold;
-    text-shadow: 0px -1px 0 #ACD7F2;
-    text-transform: uppercase;
-  }
+#cal .header .button {
+  width: 24px;
+  text-align: center;
+  position: absolute;
+}
 
-  #cal .header span {
-    display: inline-block;
-    line-height: 34px;
-    color: #FF8055;
-  }
+#cal .header .left.button {
+  left: 0;
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  border-top-left-radius: 5px;
+  border-right: 1px solid #ae2a0c;
+}
 
-  #cal .header .hook {
-    width: 9px;
-    height: 28px;
-    position: absolute;
-    bottom: 60%;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    background: #ececec;
-    background: -moz-linear-gradient(right top, #fff, #827e7d);
-    background: -webkit-gradient(linear, right top, right bottom, from(#fff), to(#827e7d));
-    box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-    -moz-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-    -webkit-box-shadow: 0px -1px 2px rgba(0, 0, 0, 0.65);
-  }
+#cal .header .right.button {
+  right: 0;
+  top: 0;
+  border-left: 1px solid #ae2a0c;
+  -webkit-border-top-right-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  border-top-right-radius: 5px;
+}
 
-  .right.hook {
-    right: 15%;
-  }
+#cal .header .button:hover {
+  background: -moz-linear-gradient(top, #d94215, #bb330f);
+  background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f));
+}
 
-  .left.hook {
-    left: 15%;
-  }
+#cal .header .month-year {
+  letter-spacing: 1px;
+  width: 100%;
+  text-align: center;
+}
 
-  #cal .header .button {
-    width: 24px;
-    text-align: center;
-    position: absolute;
-  }
+#cal table {
+  background: #fff;
+  border-collapse: collapse;
+}
 
-  #cal .header .left.button {
-    left: 0;
-    -webkit-border-top-left-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    border-top-left-radius: 5px;
-    border-right: 1px solid #ae2a0c;
-  }
+#cal td {
+  color: #2b2b2b;
+  width: 100px;
+  height: 100px;
+  line-height: 30px;
+  //text-align: center;
+  padding-bottom: 50px;
+  border: 1px solid #e6e6e6;
+  cursor: default;
+}
 
-  #cal .header .right.button {
-    right: 0;
-    top: 0;
-    border-left: 1px solid #ae2a0c;
-    -webkit-border-top-right-radius: 5px;
-    -moz-border-radius-topright: 5px;
-    border-top-right-radius: 5px;
-  }
+#cal #days td {
+  height: 26px;
+  line-height: 26px;
+  text-transform: uppercase;
+  font-size: 90%;
+  color: #9e9e9e;
+}
 
-  #cal .header .button:hover {
-    background: -moz-linear-gradient(top, #d94215, #bb330f);
-    background: -webkit-gradient(linear, left top, left bottom, from(#d94215), to(#bb330f));
-  }
+#cal #days td:not(:last-child) {
+  border-right: 1px solid #fff;
+}
 
-  #cal .header .month-year {
-    letter-spacing: 1px;
-    width: 100%;
-    text-align: center;
-  }
+#cal #cal-frame td.today {
+  background: #ededed;
+  color: #8c8c8c;
+  box-shadow: 1px 1px 0px #fff inset;
+  -moz-box-shadow: 1px 1px 0px #fff inset;
+  -webkit-box-shadow: 1px 1px 0px #fff inset;
+}
 
-  #cal table {
-    background: #fff;
-    border-collapse: collapse;
-  }
+#cal #cal-frame td:not(.nil):hover {
+  color: #fff;
+  text-shadow: #6C1A07 0px -1px;
+  background: #CD310D;
+  background: -moz-linear-gradient(top, #b32b0c, #cd310d);
+  background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d));
+  -moz-box-shadow: 0px 0px 0px;
+  -webkit-box-shadow: 0px 0px 0px;
+}
 
-  #cal td {
-    color: #2b2b2b;
-    width: 100px;
-    height: 100px;
-    line-height: 30px;
-    //text-align: center;
-    padding-bottom: 50px;
-    border: 1px solid #e6e6e6;
-    cursor: default;
-  }
+#cal #cal-frame td span {
+  font-size: 80%;
+  position: relative;
+}
 
-  #cal #days td {
-    height: 26px;
-    line-height: 26px;
-    text-transform: uppercase;
-    font-size: 90%;
-    color: #9e9e9e;
-  }
+#cal #cal-frame td span:first-child {
+  bottom: 5px;
+}
 
-  #cal #days td:not(:last-child) {
-    border-right: 1px solid #fff;
-  }
+#cal #cal-frame td span:last-child {
+  top: 5px;
+}
 
-  #cal #cal-frame td.today {
-    background: #ededed;
-    color: #8c8c8c;
-    box-shadow: 1px 1px 0px #fff inset;
-    -moz-box-shadow: 1px 1px 0px #fff inset;
-    -webkit-box-shadow: 1px 1px 0px #fff inset;
-  }
+#cal #cal-frame table.curr {
+  float: left;
+}
 
-  #cal #cal-frame td:not(.nil):hover {
-    color: #fff;
-    text-shadow: #6C1A07 0px -1px;
-    background: #CD310D;
-    background: -moz-linear-gradient(top, #b32b0c, #cd310d);
-    background: -webkit-gradient(linear, left top, left bottom, from(#b32b0c), to(#cd310d));
-    -moz-box-shadow: 0px 0px 0px;
-    -webkit-box-shadow: 0px 0px 0px;
-  }
-
-  #cal #cal-frame td span {
-    font-size: 80%;
-    position: relative;
-  }
-
-  #cal #cal-frame td span:first-child {
-    bottom: 5px;
-  }
-
-  #cal #cal-frame td span:last-child {
-    top: 5px;
-  }
-
-  #cal #cal-frame table.curr {
-    float: left;
-  }
-
-  #cal #cal-frame table.temp {
-    position: absolute;
-  }
-
+#cal #cal-frame table.temp {
+  position: absolute;
+}
 
 .settings {
   h2 {
@@ -585,7 +594,6 @@
       color: #6C757D;
     }
   }
-
   .news-text {
     border: 1px solid #FF8055;
     box-sizing: border-box;
@@ -598,6 +606,133 @@
       color: #6C757D;
     }
   }
+}
+
+.news-create-post {
+  .event-header {
+    .clouds {
+      background-image: url("/img/clouds.png");
+      background-size: cover;
+      height: 200px;
+
+      h2 {
+        font-size: 40px;
+        line-height: 38px;
+        color: #6C757D;
+      }
+    }
+  }
+
+  h3 {
+    font-weight: bold;
+  }
+
+  input {
+    width: 414px;
+    height: 45px;
+    margin-top: 20px;
+    background: #F2F8FD;
+    border: 2px solid #FF8055;
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
+
+  .event-description {
+    width: 414px;
+    height: 135px;
+    margin-top: 20px;
+    background: #F2F8FD;
+    border: 2px solid #FF8055;
+    box-sizing: border-box;
+    border-radius: 10px;
+  }
+
+  .-image {
+    img {
+      margin-left: -300px;
+      float: right;
+      height: 326.67px;
+    }
+  }
+  .create {
+    width: 413px;
+    height: 46px;
+    background: #FF8055;
+    border-radius: 10px;
+    color: #fff;
+    border: #FF8055;
+    font-size: 20px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
+
+.check-for-mail {
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.check-for-mail input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.check-mark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  border: 2px solid #FF8055;
+}
+
+/* On mouse-over, add a grey background color */
+.check-for-mail:hover input ~ .check-mark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.check-for-mail input:checked ~ .check-mark {
+  background-color: #FF8055;
+
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.check-mark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.check-for-mail input:checked ~ .check-mark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.check-for-mail .check-mark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .drive-header-image {
@@ -670,16 +805,11 @@
 }
 
 .buttoncz {
-  text-decoration: none;
-  font-size: .875rem;
-  font-weight: 300;
-  text-transform: uppercase;
-  display: inline-block;
-  border-radius: 1.5rem;
-  background-color: transparent;
-  color: #9191E9;
-  padding: 0.2rem 0.2rem;
-
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  color: #6C757D;
 }
 
 .popup {
